# smartclass

./: .buildinfo  .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  Dockerfile  LICENSE  README.rst  Snakefile  _quarto.yml  _typos.toml  cli.html  docker-compose.yml  genindex.html  great-docs.yml  index.html  installation.html  objects.inv  prek.toml  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  tox.ini  usage.html
.doctrees/: cli.doctree  index.doctree  installation.doctree  reference.doctree  usage.doctree
.doctrees/api/: smartclass.SmartclassError.doctree  smartclass.bfs_search_classes_generator.doctree  smartclass.calculate_mcs.doctree  smartclass.check_missing_stereochemistry.doctree  smartclass.check_smiles_contains_no_dot.doctree  smartclass.check_smiles_contains_no_isotope.doctree  smartclass.check_smiles_isomeric.doctree  smartclass.combine_csv_files.doctree  smartclass.configure_logging.doctree  smartclass.convert_chemical_formula.doctree  smartclass.convert_classyfire_dict.doctree  smartclass.convert_inchi_to_inchikey.doctree  smartclass.convert_inchi_to_mass.doctree  smartclass.convert_inchi_to_mol.doctree  smartclass.convert_inchi_to_smiles.doctree  smartclass.convert_list_of_dict.doctree  smartclass.convert_mol_to_cxsmiles.doctree  smartclass.convert_mol_to_inchi.doctree  smartclass.convert_mol_to_inchikey.doctree  smartclass.convert_mol_to_smarts.doctree  smartclass.convert_mol_to_smiles.doctree  smartclass.convert_molblock_to_mol.doctree  smartclass.convert_smarts_to_mol.doctree  smartclass.convert_smiles_to_canonical_smiles.doctree  smartclass.convert_smiles_to_formula.doctree  smartclass.convert_smiles_to_inchi.doctree  smartclass.convert_smiles_to_mass.doctree  smartclass.convert_smiles_to_mol.doctree  smartclass.download_file_if_not_exists.doctree  smartclass.enumerate_structures.doctree  smartclass.export_dict_to_json.doctree  smartclass.export_results.doctree  smartclass.fix_inchi_tautomerization.doctree  smartclass.get_class_structures.doctree  smartclass.get_config.doctree  smartclass.get_logger.doctree  smartclass.get_num_atoms_bonds.doctree  smartclass.get_num_matched_atoms_bonds.doctree  smartclass.get_request.doctree  smartclass.load_csv_from_path.doctree  (+19 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: ci.yml  docs.yml  tests.yml
_modules/: index.html
_modules/smartclass/: config.html  exceptions.html  logging.html
_sources/: cli.rst.txt  index.rst.txt  installation.rst.txt  reference.rst.txt  usage.rst.txt
_sources/api/: smartclass.SmartclassError.rst.txt  smartclass.bfs_search_classes_generator.rst.txt  smartclass.calculate_descriptors.rst.txt  smartclass.calculate_mcs.rst.txt  smartclass.check_missing_stereochemistry.rst.txt  smartclass.check_smiles_contains_no_dot.rst.txt  smartclass.check_smiles_contains_no_isotope.rst.txt  smartclass.check_smiles_isomeric.rst.txt  smartclass.combine_csv_files.rst.txt  smartclass.configure_logging.rst.txt  smartclass.convert_chemical_formula.rst.txt  smartclass.convert_classyfire_dict.rst.txt  smartclass.convert_inchi_to_inchikey.rst.txt  smartclass.convert_inchi_to_mass.rst.txt  smartclass.convert_inchi_to_mol.rst.txt  smartclass.convert_inchi_to_smiles.rst.txt  smartclass.convert_list_of_dict.rst.txt  smartclass.convert_mol_to_cxsmiles.rst.txt  smartclass.convert_mol_to_inchi.rst.txt  smartclass.convert_mol_to_inchikey.rst.txt  smartclass.convert_mol_to_smarts.rst.txt  smartclass.convert_mol_to_smiles.rst.txt  smartclass.convert_molblock_to_mol.rst.txt  smartclass.convert_smarts_to_mol.rst.txt  smartclass.convert_smiles_to_canonical_smiles.rst.txt  smartclass.convert_smiles_to_formula.rst.txt  smartclass.convert_smiles_to_inchi.rst.txt  smartclass.convert_smiles_to_mass.rst.txt  smartclass.convert_smiles_to_mol.rst.txt  smartclass.download_file_if_not_exists.rst.txt  smartclass.enumerate_structures.rst.txt  smartclass.export_dict_to_json.rst.txt  smartclass.get_config.rst.txt  (+39 more)
api/: smartclass.SmartclassError.html  smartclass.bfs_search_classes_generator.html  smartclass.calculate_descriptors.html  smartclass.calculate_mcs.html  smartclass.check_missing_stereochemistry.html  smartclass.check_smiles_contains_no_dot.html  smartclass.check_smiles_contains_no_isotope.html  smartclass.check_smiles_isomeric.html  smartclass.combine_csv_files.html  smartclass.configure_logging.html  smartclass.convert_chemical_formula.html  smartclass.convert_classyfire_dict.html  smartclass.convert_inchi_to_inchikey.html  smartclass.convert_inchi_to_mass.html  smartclass.convert_inchi_to_mol.html  smartclass.convert_inchi_to_smiles.html  smartclass.convert_list_of_dict.html  smartclass.convert_mol_to_cxsmiles.html  smartclass.convert_mol_to_inchi.html  smartclass.convert_mol_to_inchikey.html  smartclass.convert_mol_to_smarts.html  smartclass.convert_mol_to_smiles.html  smartclass.convert_molblock_to_mol.html  smartclass.convert_smarts_to_mol.html  smartclass.convert_smiles_to_canonical_smiles.html  smartclass.convert_smiles_to_formula.html  smartclass.convert_smiles_to_inchi.html  smartclass.convert_smiles_to_mass.html  smartclass.convert_smiles_to_mol.html  smartclass.download_file_if_not_exists.html  smartclass.enumerate_structures.html  smartclass.export_dict_to_json.html  smartclass.export_results.html  smartclass.fix_inchi_tautomerization.html  smartclass.get_class_structures.html  smartclass.get_config.html  smartclass.get_logger.html  smartclass.get_num_atoms_bonds.html  smartclass.get_num_matched_atoms_bonds.html  smartclass.get_request.html  (+32 more)
docs/: requirements.in
notebooks/: canonicalize_smarts.py  describe_smi.py  improve_classes.py  improve_subclasses_inchikeys.py  match.py  pair_stereoisomers.py  smartclass.qmd  standardize_csv.py  standardize_sdf.py
smartclass/: __init__.py  __main__.py  api.py  cli.py  config.py  exceptions.py  logging.py  version.py
tests/: __init__.py  test_config.py  test_conversions.py  test_exceptions.py  test_helpers.py  test_version.py
(+368 files in other folders)
