[project]
name = "smartclass"
version = "0.1.0"
description = "Smartclass classifies structures using SMARTS"
readme = "README.rst"
requires-python = "==3.13.*"
license = { text = "LICENSE" }
authors = [
  { name = "Adriano Rutz", email = "rutz@imsb.biol.ethz.ch" },
]
keywords = [
  "cheminformatics",
  "classification",
  "openData",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Framework :: Pytest",
  "Framework :: Sphinx",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "chembl-downloader>=0.5.2",
  "click>=8.3.1",
  "importlib-resources>=6.5.2",
  "myopic-mces>=1.0.1",
  "polars>=1.38.1",
  "pooch>=1.9.0",
  "pystow>=0.7.23",
  "rdcanon>=0.1.2",
  "rdkit>=2025.9.4",
  "requests>=2.32.5",
  "tqdm>=4.67.3",
]

[project.urls]
documentation = "https://smartclass.readthedocs.io"
homepage = "https://gitlab.ethz.ch/zambonilab/smartclass"
repository = "https://gitlab.ethz.ch/zambonilab/smartclass"

[project.scripts]
smartclass = "smartclass.cli:main"

[dependency-groups]
dev = [
  "coverage>=7.13.4",
  "prek>=0.3.2",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "requests-mock>=1.12.1",
]
docs = [
  "autodoc_pydantic>=2.2.0",
  "ghp-import>=2.1.0",
  "pydantic-core>=2.41.5",
  "sphinx>=9.1.0",
  "sphinx-automodapi>=0.22.0",
  "sphinx-click>=6.2.0",
  "sphinx-rtd-theme>=3.1.0",
  "sphinxcontrib-napoleon>=0.7",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["smartclass"]

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true

[tool.setuptools]
py-modules = ["smartclass"]

[tool.ty.rules]
unresolved-import = "ignore"
