[project]
name = "smartclass"
version = "0.1.0"
description = "Classify chemical structures using SMARTS patterns against Wikidata-sourced chemical classes"
readme = "README.rst"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Adriano Rutz", email = "rutz@imsb.biol.ethz.ch" },
]
maintainers = [
  { name = "Adriano Rutz", email = "rutz@imsb.biol.ethz.ch" },
]
keywords = [
  "SMARTS",
  "SMILES",
  "chemical-classes",
  "cheminformatics",
  "classification",
  "natural-products",
  "openData",
  "rdkit",
  "wikidata",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Framework :: Pytest",
  "Framework :: Sphinx",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Typing :: Typed",
]
dependencies = [
  "chembl-downloader>=0.5.2",
  "click>=8.3.2",
  "importlib-resources>=7.1.0",
  "myopic-mces>=1.0.1",
  "polars>=1.39.3",
  "pooch>=1.9.0",
  "pystow>=0.8.3",
  "rdcanon>=0.1.2",
  "rdkit>=2026.3.1",
  "requests>=2.33.1",
  "tqdm>=4.67.3",
]

[project.urls]
documentation = "https://zamboni-lab.github.io/smartclass/"
homepage = "https://github.com/zamboni-lab/smartclass"
repository = "https://github.com/zamboni-lab/smartclass"

[project.scripts]
smartclass = "smartclass.cli:main"

[dependency-groups]
dev = [
  "coverage>=7.13.5",
  "prek>=0.3.9",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "requests-mock>=1.12.1",
]
docs = [
  "autodoc_pydantic>=2.2.0",
  "great-docs>=0.7",
  "pydantic-core>=2.46.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["smartclass"]

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true

[tool.setuptools]
py-modules = ["smartclass"]

[tool.ty.rules]
unresolved-import = "ignore"
